--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -188,7 +188,17 @@
 
     </com.google.android.material.tabs.TabLayout>
 
-    <TableLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none"
+        android:layout_weight="1"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constrainedHeight="true"
+        >
+
+        <TableLayout
         android:id="@+id/challengeTable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -198,6 +208,6 @@
         app:layout_constraintTop_toBottomOf="@+id/button"
         app:layout_constraintVertical_bias="1.0" />
 
-
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
