--- a/app/src/main/res/layout/fragment_adjuster.xml
+++ b/app/src/main/res/layout/fragment_adjuster.xml
@@ -26,7 +26,7 @@
         android:text="default"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
+        android:textColor="?colorOnPrimary"
         android:textStyle="bold" />
 
     <Button
