--- a/app/src/main/res/layout/fragment_setup.xml
+++ b/app/src/main/res/layout/fragment_setup.xml
@@ -8,6 +8,8 @@
         android:id="@+id/gameSelection"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="?colorOnPrimary"
+        app:tabTextColor="?colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -31,6 +33,8 @@
         android:text="Difficulty"
         android:textAlignment="center"
         android:textSize="16sp"
+        android:theme="@style/customStyle"
+        android:textColor="?colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -59,6 +63,8 @@
         android:layout_marginTop="156dp"
         android:text="Player Count"
         android:textSize="16sp"
+        android:theme="@style/customStyle"
+        android:textColor="?colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,10 +87,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="252dp"
-        android:backgroundTint="#3D9890"
+        android:backgroundTint="?colorSecondary"
         android:onClick="generate"
         android:text="Generate"
-        android:textColor="#212121"
+        android:textColor="?colorOnSecondary"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
